# new_repo

./: 1__fact.cpp
01_C++_student/: a.out  main.cpp  student_imp.hpp
02_C++_box/: .main_Box.cpp.swp  1__main_Box.cpp  1__main_Box.out  a.out  box.hpp  main_Box.cpp  main_Box.out
03_C++_Dock/: .1__Doctor_Registration.cpp.swp  .HealthCare.hpp.swp  1__Doctor_Registration.cpp  HealthCare.hpp
04_C++_Vec/: 1__Vec.cpp  2__vec.h  a.out  main.cpp  main.out
05_C++_Library/: .3__Library.h.swp  .4__book.cpp.swp  .6__Library.h.swp  1__book.h  2__reader.h  3__Library.h  4__book.cpp  5__reader.cpp  6__Library.cpp  6__Library.h  README.md  a.out  main.cpp  main.out
06_C++_string/: .Str.h.swp  .Str_impl.hpp.swp  README.md  Str.h  Str_impl.hpp  TurnCppIntoExe  a.out  main.cpp  main.out
07_C++singly_linked_list/: .s_ln_list_dec.h.swp  TurnCppIntoExe  main.cpp  main.out  s_ln_list.h  s_ln_list_dec.h
08_C++/: .gitignore  1__Product.h  2__DiscountedProduct.h  3__Cart.h  4__Customer.h  5__Product_impl.hpp  TurnCppIntoExe  main.cpp
10_C++_Spreadsheet_Cell/: .gitignore  1__Spreadsheet.h  2__Spreadsheet.cpp  3__SpreadsheetCell.h  4__SpreadsheetCell.cpp  CMakeLists.txt  TurnCppIntoExe  a.out  main.cpp
10_C++_Spreadsheet_Cell/.cache/clangd/index/: 1__Spreadsheet.h.B8398FFBACAC7D4F.idx  2__Spreadsheet.cpp.25E6E59B14BEEC19.idx  3__SpreadsheetCell.h.419485A8FF46FF67.idx  4__SpreadsheetCell.cpp.0F53492018BAA149.idx  main.cpp.FF26ADF74703DF99.idx
10_C++_Spreadsheet_Cell/SpreadsheetCell/src/: 1__Spreadsheet.h  2__Spreadsheet.cpp  3__SpreadsheetCell.h  4__SpreadsheetCell.cpp  main.cpp
(+26 files in other folders)
